spade-tests/src/snapshots/spade_tests__hir_lowering__tests__absolute_referring_to_unavailable_variable_causes_error.snap
---
source: spade-tests/src/hir_lowering.rs
---
pipeline(5) X(clk: clock) -> bool {reg*5; false}

pipeline(6) main(clk: clock, x: bool) -> bool {
        let x = inst(5) X(clk);
    reg*4;
        'here
    reg;
        let res = stage(here).x;
    reg;
        res
}


error: Lexer error, unexpected symbol
   ┌─ testinput:6:9
   │  
 6 │ ╭         'here
 7 │ │     reg;
 8 │ │         let res = stage(here).x;
 9 │ │     reg;
10 │ │         res
11 │ │ }
12 │ │ 
   │ ╰^

error: Unexpected `end of file`, expected expression
  ┌─ testinput:5:11
  │
5 │     reg*4;
  │           ^ expected expression here
